--- a/guide/Introduction.tex
+++ b/guide/Introduction.tex
@@ -83,7 +83,7 @@ It tries to explain tools and possible workflows in an easy-to-follow manner and
 
 
 \noindent
-If you are already familiar with 3D Slicer and want to start with the segmentation right away, skip to page \pageref{qsg} for the Quick Start Guide.
+If you are already familiar with 3D Slicer and want to start with the segmentation right away, skip to page \pageref{section:quickstart} for the Quick Start Guide.
 
 \subsection{Installation}
 Basic installation instructions for 3D Slicer:
