--- a/guide/Titlepage.tex
+++ b/guide/Titlepage.tex
@@ -8,7 +8,7 @@
 	% {\includegraphics[width=6cm]{images/fhwn-logo.png}};
 	\vspace*{\dimexpr-1cm-\topmargin-\headsep-\headheight-\baselineskip}%
 	\hspace*{\dimexpr-4cm-\evensidemargin-\parindent}%
-	\makebox[\paperwidth][r]{\includegraphics[width=8cm, height=3cm]{../images/fhwn-logo.png}}
+	\makebox[\paperwidth][r]{\includegraphics[width=8cm, height=3cm]{../images/fhwn-logo-neu-ohneSchutzraum.png}}
 
 	\begin{center}
 		{\noindent \linespread{1.3} \color{header-blue} \Huge \textbf{\@title} \par }
