--- a/includes/proposal/part01-titlepage.tex
+++ b/includes/proposal/part01-titlepage.tex
@@ -3,14 +3,14 @@
 \makeatletter
 
 \begin{titlepage}
-\thispagestyle{empty}
+	\thispagestyle{empty}
 	% \tikz [remember picture, overlay] %
 	% \node [shift={(1cm,-1cm)}] at (current page.north east) %
 	% [anchor=north east] %
 	% {\includegraphics[width=6cm]{images/fhwn-logo.png}};
 	\vspace*{\dimexpr-1cm-\topmargin-\headsep-\headheight-\baselineskip}%
-  \hspace*{\dimexpr-4cm-\evensidemargin-\parindent}%
-	\makebox[\paperwidth][r]{\includegraphics[width=8cm, height=3cm]{images/fhwn-logo.png}}
+	\hspace*{\dimexpr-4cm-\evensidemargin-\parindent}%
+	\makebox[\paperwidth][r]{\includegraphics[width=8cm, height=3cm]{images/fhwn-logo-neu-ohneSchutzraum.png}}
 
 	\begin{center}
 		{\noindent \linespread{1.3} \color{header-blue} \Huge \textbf{\@title} \par }
