--- a/includes/thesis/part01-page1-titlepage.tex
+++ b/includes/thesis/part01-page1-titlepage.tex
@@ -4,33 +4,33 @@
 
 \begin{titlepage}
 
-  \includegraphics[width=6cm]{images/fhwn-logo.png}
+	\includegraphics[width=6cm]{images/fhwn-logo-neu-ohneSchutzraum.png}
 
-\begin{sffamily}
-  \vspace{70pt}
-  {\noindent \linespread{1.3} \color{header-blue} \Huge \textbf{\@title} \par }
-  \vspace{5pt}
-  {\noindent\Large Master's Thesis \par}
-  \vspace{20pt}
+	\begin{sffamily}
+		\vspace{70pt}
+		{\noindent \linespread{1.3} \color{header-blue} \Huge \textbf{\@title} \par }
+		\vspace{5pt}
+		{\noindent\Large Master's Thesis \par}
+		\vspace{20pt}
 
-  \hspace{-35mm}
-  \includegraphics[width=18.67cm]{images/titlepage-line.png}
+		\hspace{-35mm}
+		\includegraphics[width=18.67cm]{images/titlepage-line.png}
 
-  \vspace{15pt}
+		\vspace{15pt}
 
-  \tabto{2cm}Submitted by: \tabto{7cm}\textbf{\@author} \\
-  \tabto{2cm}Matriculation No.: \tabto{7cm}\textbf{\matriculationNumber} \\
-  \vspace{15pt}
-  \tabto{2cm}at \tabto{7cm}\textbf{\study}\\
-%%  \tabto{7cm}\textbf{\institutename}
-  \tabto{7cm}\textbf{\studyprogram} \\
-  \vspace{15pt}
-  \tabto{2cm}Advisor: \tabto{7cm}\textbf{\advisor}
+		\tabto{2cm}Submitted by: \tabto{7cm}\textbf{\@author} \\
+		\tabto{2cm}Matriculation No.: \tabto{7cm}\textbf{\matriculationNumber} \\
+		\vspace{15pt}
+		\tabto{2cm}at \tabto{7cm}\textbf{\study}\\
+		%%  \tabto{7cm}\textbf{\institutename}
+		\tabto{7cm}\textbf{\studyprogram} \\
+		\vspace{15pt}
+		\tabto{2cm}Advisor: \tabto{7cm}\textbf{\advisor}
 
-  \vfill
+		\vfill
 
-  \place, \thesisdate
-\end{sffamily}
+		\place, \thesisdate
+	\end{sffamily}
 \end{titlepage}
 \makeatother
 
