--- a/includes/thesis/part01-page3-abstract.tex
+++ b/includes/thesis/part01-page3-abstract.tex
@@ -1,12 +1,12 @@
 %!TEX root = ../../thesis.tex
 
 \newcommand*{\AbstractHead}[1]{%
-{\noindent\color{header-blue}\sffamily\Large\textbf{#1}}
-\vspace{10pt}\\
+	{\noindent\color{header-blue}\sffamily\Large\textbf{#1}}
+	\vspace{10pt}\\
 }% These command is used to create the Date and Signature fields.
 
 \newcommand*{\SomeSpace}{%
-\vspace{\baselineskip}
+	\vspace{\baselineskip}
 }
 
 \AbstractHead{Abstract in English}
@@ -18,7 +18,7 @@
 \AbstractHead{Keywords}
 \normalsize
 \noindent
-Efficient Market Hypothesis, Stock Price, Twitter, Sentiment Classification
+MicroCT, segmentation, guide, 3D Slicer
 
 \glsresetall{}
 \SomeSpace
@@ -32,6 +32,6 @@ Efficient Market Hypothesis, Stock Price, Twitter, Sentiment Classification
 \AbstractHead{Keywords}
 \normalsize
 \noindent
-Effiziente Markt Hypothese, Aktienkurs, Twitter, Sentiment Klassifizierung
+MicroCT, Segmentierung, Anleitung, 3D Slicer
 
 \glsresetall{}
