--- a/includes/thesis/part03-page4-appendix.tex
+++ b/includes/thesis/part03-page4-appendix.tex
@@ -1,46 +1,17 @@
 %!TEX root = ../../thesis.tex
 \appendix
 
-\chapter{Appendix A: Used Software, Packages and their Version}
-  \begin{table}[!hbt]
-    \centering
-    \begin{tabular}{!l ^l ^l}
-      \hline
-      \rowstyle{\bfseries}
-      Used software & Package & Version \\ \hline
-      Python &  & 3.7.2 \\
-        & NLTK    & 3.3 \\
-        & Numpy   & 1.15.4 \\
-        & Pandas  & 0.23.4 \\
-        & Python-dateutil & 2.7.5 \\
-        & SciKit-Learn & 0.20.0 \\
-        & SciPy   & 1.1.0 \\
-        & TextBlob & 0.15.1 \\
-        & TwitterAPI & 2.5.4 \\ \hline
-      R & & 3.5.2 \\
-        & dplyr & 0.7.8 \\
-        & imputeTS & 2.7 \\
-        & ggplot2 & 3.1.0 \\
-        & fUnitRoots & 3042.79 \\
-        & urca & 1.3.0 \\
-        & vars & 1.5.3 \\
-        & aod & 1.3 \\
-        & zoo & 1.8.4 \\
-        & tseries & 0.10.46 \\
-        & tictoc & 1.0 \\ \hline
-    \end{tabular}
-  
-    \caption{Used software and their corresponding version}
-    \label{tab:casestudy-usedsoftware}
-  \end{table}
+\chapter{Appendix A: Segmentation guide}
+\label{a:guide}
+\includepdf[pages=-]{../guide/seg_guide_Rohrbacher_Stefan.pdf}
 
-\chapter{Appendix B: Sentiment Analysis Python Script}
-%\lstinputlisting[language=Python, firstline=37, lastline=45]{source_filename.py}
+% \chapter{Appendix B: Sentiment Analysis Python Script}
+% %\lstinputlisting[language=Python, firstline=37, lastline=45]{source_filename.py}
 
-\lstinputlisting[language=Python,caption={Python Script for Sentiment Analysis of Tweets},label=lst:appendix-tweeets_analyzer]{includes/thesis/part03-page4.1-tweets_analyzer.py}
+% \lstinputlisting[language=Python,caption={Python Script for Sentiment Analysis of Tweets},label=lst:appendix-tweeets_analyzer]{includes/thesis/part03-page4.1-tweets_analyzer.py}
 
-\chapter{Appendix C: R Analysis Code}
+% \chapter{Appendix C: R Analysis Code}
 
-\lstinputlisting[language=R,caption={R Analysis Functions},label=lst:appendix-rfunctions]{includes/thesis/part03-page4.2-rfunctions.R}
+% \lstinputlisting[language=R,caption={R Analysis Functions},label=lst:appendix-rfunctions]{includes/thesis/part03-page4.2-rfunctions.R}
 
-\lstinputlisting[language=R,caption={R Analysis Script},label=lst:appendix-rAnalyze]{includes/thesis/part03-page4.3-rAnalyze.R}
+% \lstinputlisting[language=R,caption={R Analysis Script},label=lst:appendix-rAnalyze]{includes/thesis/part03-page4.3-rAnalyze.R}
